lab1/Test/L1-A-5-77.cmm
{
  int Ic , Af2kGGBoj0shjEZvnj = HncZw ( qTwvhlYV ) 
    = p8ZresJDQrTOAe8 , Hsalwx7mW0FNlA1CQT [ 1417933775 
    ] [ ] , _3x5otr11YFE ;
  struct {
  }UIQM5vOAsBlv3A = - ! VWfnUuXeiEFCMx8 ( ) = edzQbF8 
    ( Zk1HXsP ) = Qu , mBkCXAnQ8itZshREH [ 659279088 ] 
    , DK [ 1601488082 ] 637161878 ] [ 773251030 ] [ 1670839623 
    ] [ 909622009 ] = F7_ws , AplcbOWpVjaVOlqX6su ;
  int JTojAVcFnFlYeJV5TsPw [ 46694493 ] [ 691824305 
    ] [ 672730837 ] 2142171150 ] [ 1460257229 ] ;
};
#